<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.kstachowicz.weatherapp.MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/coords"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/longitude"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintLeft_toLeftOf="@+id/lon"
        app:layout_constraintTop_toBottomOf="@+id/lon"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/lat"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/wind"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/windVelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/velocity"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView7"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/windDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        app:layout_constraintLeft_toLeftOf="@+id/windVelo"
        app:layout_constraintTop_toBottomOf="@+id/windVelo"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/arrowImg"
        android:layout_width="25dp"
        android:layout_height="21dp"
        app:layout_constraintLeft_toRightOf="@+id/windDir"
        app:layout_constraintTop_toBottomOf="@+id/windDir"
        app:srcCompat="@drawable/arrow"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toBottomOf="@+id/temp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/temp" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-40dp"
        android:layout_marginLeft="-132dp"
        android:layout_marginStart="16dp"
        android:text="@string/city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1" />

</android.support.constraint.ConstraintLayout>
